--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ ipython_config.py
 # Environment variables
 .env
 .env.local
+.env.*
+!.env.example
 
 # IDE
 .vscode/
@@ -75,3 +77,18 @@ htmlcov/
 
 # Streamlit
 .streamlit/secrets.toml
+
+# Credentials and API keys
+credentials.json
+*.pem
+*.key
+*.p12
+*.pfx
+secrets/
+config/secrets.yaml
+config/credentials.yaml
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
