--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
 # Core Data Processing
-fastf1==3.4.0
-pandas==2.2.2
-numpy==1.26.4
+fastf1>=3.4.0
+pandas>=2.2.0
+numpy>=1.26.0
 
 # Machine Learning
-scikit-learn==1.5.1
-xgboost==2.1.0
-lightgbm==4.5.0
-catboost==1.2.5
+scikit-learn>=1.5.0
+xgboost>=2.1.0
+lightgbm>=4.5.0
+catboost>=1.2.0
 
 # Hyperparameter Optimization
-optuna==3.6.1
+optuna>=3.6.0
 
 # Model Interpretation
-shap==0.45.1
+shap>=0.45.0
 
 # Visualization
-matplotlib==3.9.1
-seaborn==0.13.2
-plotly==5.23.0
+matplotlib>=3.9.0
+seaborn>=0.13.0
+plotly>=5.20.0
 
 # Web Dashboard
-streamlit==1.37.1
+streamlit>=1.37.0
 
 # Utilities
-tqdm==4.66.5
-joblib==1.4.2
+tqdm>=4.66.0
+joblib>=1.4.0
 
 # Jupyter
-jupyter==1.0.0
-ipykernel==6.29.5
+jupyter>=1.0.0
+ipykernel>=6.29.0
